fixin dash and persona spacing bug

--- a/styles/work2.sass
+++ b/styles/work2.sass
@@ -262,7 +262,7 @@ a
 		p
 			margin-top: 2em
 		ul
-			width: 53%
+			width: 50%
 			margin-left: 8%
 			display: inline-block
 			font-weight: 700
